<resources>
    <string name="about">About</string>
    <string name="about_app">About the App</string>
    <string name="afternoon_alert">Temperature %1$s has dropped to your limit of %2$s</string>
    <string name="afternoon_temp_alert">Afternoon Alert?</string>
    <string name="all_time_stats">All Time Statistics</string>
    <string name="app_name" translatable="false">weeWX App</string>
    <string name="app_theme">App Theme</string>
    <string name="avg">avg</string>
    <string name="battery_warning">Warning: Enabling the above option may drain your battery faster than usual</string>
    <string name="before">before</string>
    <string name="bgColour">Widget Background Colour Picker</string>
    <string name="custom2">Custom</string>
    <string name="custom_setting">Custom Colours</string>
    <string name="custom_url">Optional: Custom URL</string>
    <string name="custom_url_not_set_or_blank">Custom URL isn\'t set, or is blank. You can go into settings to add a custom URL</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="data_url_was_blank">The %1$s URL was blank, please check your %2$s file and try again</string>
    <string name="delete_all_data">Delete All Data and Shutdown</string>
    <string name="empty">Empty</string>
    <string name="error">Error!</string>
    <string name="error_occurred_while_attempting_to_update">An error occurred while attempting to update usage</string>
    <string name="every_5_minutes">Every 5 Minutes</string>
    <string name="every_5_seconds">Every 5 Seconds</string>
    <string name="every_10_minutes">Every 10 Minutes</string>
    <string name="every_10_seconds">Every 10 Seconds</string>
    <string name="every_15_minutes">Every 15 Minutes</string>
    <string name="every_30_minutes">Every 30 Minutes</string>
    <string name="every_30_seconds">Every 30 Seconds</string>
    <string name="every_60_seconds">Every 60 Seconds</string>
    <string name="every_hour">Every Hour</string>
    <string name="failed_to_merge_weather_data">Failed to merge the %1$s data with the %2$s data</string>
    <string name="failed_to_process_forecast_data">Failed to process forecast data</string>
    <string name="failed_to_process_weather_data">Failed to correctly process the weather data from your server, specifically the %1$s data</string>
    <string name="fgColour">Widget Foreground Colour Picker</string>
    <string name="fileURL">Enter the URL to %1$s</string>
    <string name="force_dark_mode">Force Dark Mode</string>
    <string name="forecast">Forecast Page</string>
    <string name="forecast2">Forecast</string>
    <string name="forecast_6hourly">6 Hourly</string>
    <string name="forecast_daily">Daily</string>
    <string name="forecast_interval">Forecast Interval (if applicable)</string>
    <string name="forecast_type_is_invalid">Forecast type \'%1$s\' is invalid, check your settings file and try again</string>
    <string name="forecast_url_not_set">Forecast URL not set, set it in %1$s</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="ill_fix_and_try_again">I\'ll Fix It and Try Again</string>
    <string name="indoor_readings">Show Indoor Readings?</string>
    <string name="inigo_needs_updating">This app has been updated but the server you are connecting to hasn\'t updated the Inigo Plugin for weeWX. Fields may not show up properly until weeWX is updated</string>
    <string name="interval_3h">3 Hourly</string>
    <string name="interval_6h">6 Hourly</string>
    <string name="interval_12h">12 Hourly</string>
    <string name="interval_daily">Daily</string>
    <string name="interval_hourly">Hourly</string>
    <string name="invalid_update_interval">Update interval is invalid, update settings and then retry</string>
    <string name="json_formatted_data">The %1$s now requires a %2$s data file from %3$s server, you need to update the %4$s and update the %5$s file before this app will function correctly. Click Ok for more details on %6$s</string>
    <string name="last_month_stats">Last Month\'s Statistics</string>
    <string name="last_year_stats">Last Year\'s Statistics</string>
    <string name="light_theme">Light Theme</string>
    <string name="manual_update">Manual Updates</string>
    <string name="manual_update_set_refresh_screen_to_load">Manual update set, swipe refresh screen to load</string>
    <string name="match_app">Match App</string>
    <string name="metric">Use Metric?</string>
    <string name="minutes">minutes</string>
    <string name="morning_alert">Temperature %1$s has risen to your limit of %2$s</string>
    <string name="morning_temp_alert">Morning Alert?</string>
    <string name="next_moon">Next moon events?</string>
    <string name="no">No</string>
    <string name="no_download_or_app_not_setup">No download or app hasn\'t been setup</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="notifications_needed">Notifications are needed to alert you when temperature, rainfall or rainrate meets your set limits</string>
    <string name="notifications_needed2">Since you declined the notification permission twice, you need to enable it in settings instead, launch settings?</string>
    <string name="ok">Ok</string>
    <string name="please_wait_verify_url">Please wait while we verify the URL you submitted</string>
    <plurals name="processing_errors2">
        <item quantity="few">There were %1$d errors detected while updating, view %2$s logs for the details</item>
        <item quantity="many">There were %1$d errors detected while updating, view %2$s logs for the details</item>
        <item quantity="one">There was %1$d error detected while updating, view %2$s logs for the details</item>
        <item quantity="other">There were %1$d errors detected while updating, view %2$s logs for the details</item>
        <item quantity="two">There were %1$d errors detected while updating, view %2$s logs for the details</item>
        <item quantity="zero">There were %1$d errors detected while updating, view %2$s logs for the details</item>
    </plurals>
    <plurals name="processing_errors">
        <item quantity="few">There were %1$d errors detected in the %2$s file, view the %2$s file found at %3$s or view %4$s logs for the details</item>
        <item quantity="many">There were %1$d errors detected in the %2$s file, view the %2$s file found at %3$s or view %4$s logs for the details</item>
        <item quantity="one">There was %1$d error detected in the %2$s file, view the %2$s file found at %3$s or view %4$s logs for the details</item>
        <item quantity="other">There were %1$d errors detected in the %2$s file, view the %2$s file found at %3$s or view %4$s logs for the details</item>
        <item quantity="two">There were %1$d errors detected in the %2$s file, view the %2$s file found at %3$s or view %4$s logs for the details</item>
        <item quantity="zero">There were %1$d errors detected in the %2$s file, view the %2$s file found at %3$s or view %4$s logs for the details</item>
    </plurals>
    <string name="radar">Radar</string>
    <string name="radar_download_failed">Failed to download the radar image</string>
    <string name="radar_still_downloading">Radar image is still downloading</string>
    <string name="radar_type_is_invalid">Radar type \'%1$s\' is invalid, check your settings file and try again</string>
    <string name="radar_url_not_set">Radar URL not set. You can go to settings to change</string>
    <string name="radarforecast">On Main screen:</string>
    <string name="rain_in_inches">Rain in Inches?</string>
    <string name="rainfall_alert">Rainfall Alerts?</string>
    <string name="rainfall_alert_desc">Alerts you daily if the rainfall reaches your set limit</string>
    <string name="rainfall_alert_notification">Rainfall %1$s has matched to your limit of %2$s</string>
    <string name="rainfall_alert_str">Rainfall Alert</string>
    <string name="rainfall_limit">Rainfall Limit</string>
    <string name="rainrate_alert_severe">Severe Rainrate Alerts?</string>
    <string name="rainrate_alert_severe_desc">Alerts if the rainrate exceeds the severe limit based on rainfall duration</string>
    <string name="rainrate_alert_severe_notification">Rainrate of %1$s in the last %2$d %3$s has hit \'Severe\' level</string>
    <string name="rainrate_alert_severe_str">Severe Rainrate Alert</string>
    <string name="rainrate_alert_str">Rainrate Alert</string>
    <string name="rainrate_alert_warning">Warning Rainrate Alerts?</string>
    <string name="rainrate_alert_warning_desc">Alerts if the rainrate exceeds the warning limit based on rainfall duration</string>
    <string name="rainrate_alert_warning_notification">Rainrate of %1$s in the last %2$d %3$s has hit \'Warning\' level</string>
    <string name="rainrate_alert_warning_str">Warning Rainrate Alert</string>
    <string name="rainrate_alert_watch">Watch Rainrate Alerts?</string>
    <string name="rainrate_alert_watch_desc">Alerts if the rainrate exceeds the watch limit based on rainfall duration</string>
    <string name="rainrate_alert_watch_notification">Rainrate of %1$s in the last %2$d %3$s has hit \'Watch\' level</string>
    <string name="rainrate_alert_watch_str">Watch Rainrate Alert</string>
    <string name="refresh_time">Choose Refresh Time</string>
    <string name="remove_all_data">Are you sure you want to remove all data?</string>
    <string name="save_app_debug_logs">Save app debug logs</string>
    <string name="save_settings">Save Settings</string>
    <string name="settings2">Go Back To Settings</string>
    <string name="show_forecast">Show Forecast</string>
    <string name="show_radar">Show Radar</string>
    <string name="since">since</string>
    <string name="skip">Skip</string>
    <string name="stats2">Statistics</string>
    <string name="still_downloading_forecast_data">Still downloading forecast data</string>
    <string name="still_downloading_weather_data">Still downloading weather data</string>
    <string name="swipe_lock">Swipe Lock</string>
    <string name="system_default">System Default</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_alert_desc">Alerts up to twice daily when the temperature reaches your set limits</string>
    <string name="temperature_alert_str">Temperature Alert</string>
    <string name="this_months_stats">This Month\'s Statistics</string>
    <string name="this_year_stats">This Year\'s Statistics</string>
    <string name="today">Today</string>
    <string name="todayStats">Today\'s Statistics</string>
    <string name="unknown_error_occurred">Unknown error occurred</string>
    <string name="update_over_wifi">Only update over Wi-Fi?</string>
    <string name="update_set_to_manual_but_no_content_cached">Set to manual updates, but no content cached yet</string>
    <string name="update_while_running">Update while running</string>
    <string name="url_was_default_or_empty">URL was set to the default or was empty</string>
    <string name="use_exact_alarm">Use exact update times</string>
    <string name="wasnt_able_to_connect_custom_url">Wasn\'t able to connect or download from the custom URL specified</string>
    <string name="wasnt_able_to_connect_forecast">Wasn\'t able to connect or download the forecast</string>
    <string name="wasnt_able_to_connect_or_download">Wasn\'t able to connect or download %1$s from %2$s</string>
    <string name="wasnt_able_to_connect_radar_image">Wasn\'t able to connect or download radar= image from the internet</string>
    <string name="wasnt_able_to_connect_settings">Wasn\'t able to connect or download the settings from your server</string>
    <string name="wasnt_able_to_connect_webcam_url">Wasn\'t able to connect or download a webcam image from your server</string>
    <string name="weather2">Weather</string>
    <string name="webcam2">Webcam</string>
</resources>