<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/AppTheme.weeWxWeatherApp.ViewPager"
	android:layout_width="match_parent"
	android:layout_height="0dp"
	android:layout_weight="1"
	android:orientation="vertical"
	tools:ignore="VisualLintBounds">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingHorizontal="16dp"
		android:orientation="vertical">

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:hint="@string/fileURL"
			tools:ignore="VisualLintBounds">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/settings"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:inputType="textUri"
				android:textSize="20sp"
				android:layout_marginTop="10dp"
				tools:ignore="VisualLintTextFieldSize" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.materialswitch.MaterialSwitch
			android:id="@+id/show_indoor"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="48dp"
			android:text="@string/indoor_readings"
			android:textSize="20sp"
			android:layout_marginTop="10dp"
			tools:ignore="VisualLintButtonSize,VisualLintBounds" />

		<com.google.android.material.materialswitch.MaterialSwitch
			android:id="@+id/metric_forecasts"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:checked="true"
			android:minHeight="48dp"
			android:text="@string/metric"
			android:textSize="20sp"
			android:layout_marginTop="10dp"
			tools:ignore="VisualLintButtonSize,VisualLintBounds" />

		<com.google.android.material.materialswitch.MaterialSwitch
			android:id="@+id/wifi_only"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="48dp"
			android:text="@string/update_over_wifi"
			android:textSize="20sp"
			android:layout_marginTop="10dp"
			tools:ignore="VisualLintButtonSize,VisualLintBounds" />

		<com.google.android.material.materialswitch.MaterialSwitch
			android:id="@+id/use_icons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="48dp"
			android:text="@string/use_icons"
			android:textSize="20sp"
			android:layout_marginTop="10dp"
			tools:ignore="VisualLintButtonSize,VisualLintBounds" />

		<com.google.android.material.textfield.TextInputLayout
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/spinner2"
			android:hint="@string/app_theme"
			app:boxBackgroundMode="outline"
			app:boxStrokeWidth="1dp"
			android:textSize="20sp"
			android:layout_marginTop="10dp"
			app:boxStrokeColor="?attr/colorOutline"
			tools:ignore="VisualLintBounds">

			<AutoCompleteTextView
				android:id="@+id/spinner2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:focusable="true"
				android:importantForAutofill="no"
				android:inputType="none"
				android:textSize="20sp"
				tools:ignore="NoSpeakableText,VisualLintTextFieldSize,SpeakableTextPresentCheck" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/spinner1"
			android:hint="@string/refresh_time"
			app:boxBackgroundMode="outline"
			app:boxStrokeWidth="1dp"
			android:textSize="20sp"
			android:layout_marginTop="10dp"
			app:boxStrokeColor="?attr/colorOutline"
			tools:ignore="VisualLintBounds">

			<AutoCompleteTextView
				android:id="@+id/spinner1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:focusable="true"
				android:textSize="20sp"
				android:importantForAutofill="no"
				android:inputType="none"
				tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textview.MaterialTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:gravity="bottom"
			android:ellipsize="none"
			android:inputType="textMultiLine"
			android:maxLines="1"
			android:textSize="20sp"
			android:scrollHorizontally="false"
			android:singleLine="false"
			android:text="@string/radarforecast"
			tools:ignore="VisualLintBounds" />

		<RadioGroup
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="end"
			tools:ignore="VisualLintBounds">

			<com.google.android.material.radiobutton.MaterialRadioButton
				android:id="@+id/showRadar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:padding="0dp"
				android:gravity="center_vertical"
				android:layout_gravity="center_vertical"
				android:text="@string/show_radar" />

			<com.google.android.material.radiobutton.MaterialRadioButton
				android:id="@+id/showForecast"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:layout_gravity="center_vertical"
				android:text="@string/show_forecast" />
		</RadioGroup>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:hint="@string/custom_url"
			tools:ignore="VisualLintBounds">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/customURL"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:inputType="textUri"
				tools:ignore="VisualLintTextFieldSize" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:hint="@string/fgColour"
			tools:ignore="VisualLintBounds">

			<com.github.evilbunny2008.colourpicker.CPEditText
				android:id="@+id/fg_Picker"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:autofillHints="@string/fgColour"
				android:gravity="center_vertical"
				android:clickable="true"
				android:focusable="false"
				tools:ignore="VisualLintTextFieldSize" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:hint="@string/bgColour"
			tools:ignore="VisualLintBounds">

			<com.github.evilbunny2008.colourpicker.CPEditText
				android:id="@+id/bg_Picker"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:clickable="true"
				android:focusable="false"
				tools:ignore="VisualLintTextFieldSize" />
		</com.google.android.material.textfield.TextInputLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:orientation="horizontal"
		tools:ignore="VisualLintBounds">

		<com.google.android.material.button.MaterialButton
			android:id="@+id/aboutButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minHeight="48dp"
			android:text="@string/about"
			android:textSize="18sp"
			tools:ignore="ButtonStyle,VisualLintButtonSize,TouchTargetSizeCheck" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/saveButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minHeight="48dp"
			android:text="@string/save_settings"
			android:textSize="18sp"
			tools:ignore="ButtonStyle,VisualLintButtonSize,TouchTargetSizeCheck" />
	</LinearLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/deleteData"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/delete_all_data"
		android:textSize="18sp"
		android:layout_marginTop="10dp"
		tools:ignore="VisualLintButtonSize,VisualLintBounds" />
</LinearLayout>
